feat: trpc backend and project structure updates

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,8 @@
+# When adding additional environment variables, the schema in "/src/env.js"
+# should be updated accordingly.
+
+# Drizzle (Neon)
 DATABASE_URL=""
-AUTH_SECRET=""
+
+# Next Auth
+NEXTAUTH_SECRET=""
