--- a/package.json
+++ b/package.json
@@ -8,12 +8,12 @@
     "start": "next start",
     "lint": "next lint",
     "typecheck": "tsc --noEmit",
-    "format": "npx prettier . --write",
-    "db:studio": "npx drizzle-kit studio",
-    "db:generate": "npx drizzle-kit generate",
-    "db:drop": "npx drizzle-kit drop",
-    "db:migrate": "npx drizzle-kit migrate",
-    "db:seed": "tsx ./src/server/db/seed.ts"
+    "format": "prettier . --write",
+    "db:studio": "drizzle-kit studio",
+    "db:generate": "drizzle-kit generate",
+    "db:drop": "drizzle-kit drop",
+    "db:migrate": "drizzle-kit migrate",
+    "db:seed": "tsx ./src/server/db/scripts/seed.ts"
   },
   "dependencies": {
     "@auth/drizzle-adapter": "^1.4.2",
@@ -22,30 +22,40 @@
     "@node-rs/argon2": "^1.8.3",
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-slot": "^1.1.0",
+    "@t3-oss/env-nextjs": "^0.11.1",
+    "@tanstack/react-query": "^5.56.2",
+    "@trpc/client": "^11.0.0-rc.502",
+    "@trpc/react-query": "^11.0.0-rc.502",
+    "@trpc/server": "^11.0.0-rc.502",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "dayjs": "^1.11.13",
     "dotenv": "^16.4.5",
     "drizzle-orm": "^0.33.0",
     "lucide-react": "^0.441.0",
     "next": "14.2.11",
     "next-auth": "^5.0.0-beta.20",
     "next-themes": "^0.3.0",
+    "npm": "^10.8.3",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.53.0",
     "sonner": "^1.5.0",
+    "superjson": "^2.2.1",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
     "tsx": "^4.19.1",
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@tanstack/eslint-plugin-query": "^5.56.1",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "drizzle-kit": "^0.24.2",
     "eslint": "^8",
     "eslint-config-next": "14.2.11",
+    "eslint-plugin-drizzle": "^0.2.3",
     "postcss": "^8",
     "prettier": "3.3.3",
     "prettier-plugin-tailwindcss": "^0.6.6",
