feat: added rate limiting via upstash redis

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-# When adding additional environment variables, the schema in "/src/env.js"
+# When adding additional environment variables, the schema in "/src/env.ts"
 # should be updated accordingly.
 
 # Drizzle (Neon)
@@ -6,3 +6,7 @@ DATABASE_URL=""
 
 # Next Auth
 NEXTAUTH_SECRET=""
+
+# Upstash
+UPSTASH_REDIS_REST_URL=""
+UPSTASH_REDIS_REST_TOKEN=""
