--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@trpc/client": "^11.0.0-rc.502",
     "@trpc/react-query": "^11.0.0-rc.502",
     "@trpc/server": "^11.0.0-rc.502",
+    "@uidotdev/usehooks": "^2.4.1",
     "@upstash/ratelimit": "^2.0.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
