--- a/.github/workflows/preview.yml
+++ b/.github/workflows/preview.yml
@@ -5,9 +5,10 @@ env:
   VERCEL_PROJECT_ID: ${{ secrets.VERCEL_PROJECT_ID }}
 
 on:
-  push:
-    branches-ignore:
+  pull_request:
+    branches:
       - main
+
 
 jobs:
 
@@ -15,13 +16,16 @@ jobs:
     name: Pre-build checks
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout
+        uses: actions/checkout@v4
       - name: Install dependencies
         run: npm install
       - name: Typecheck
         run: npm run typecheck
       - name: Lint
         run: npm run lint
+      - name: Formatter
+        run: npm run format:check
 
   deploy:
     name: Preview deployment
