--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -15,13 +15,16 @@ jobs:
     name: Pre-build checks
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout
+        uses: actions/checkout@v4
       - name: Install dependencies
         run: npm install
       - name: Typecheck
         run: npm run typecheck
       - name: Lint
         run: npm run lint
+      - name: Formatter
+        run: npm run format:check
 
   deploy:
     name: Production deployment
