--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -26,10 +26,24 @@ jobs:
       - name: Formatter
         run: npm run format:check
 
+  migrate:
+    name: Migrations
+    runs-on: ubuntu-latest
+    needs: [pre-build]
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+      - name: Install dependencies
+        run: npm install
+      - name: Apply migrations
+        run: npm run db:migrate
+        env:
+          DATABASE_URL: ${{ secrets.DATABASE_URL }}
+
   deploy:
     name: Production deployment
     runs-on: ubuntu-latest
-    needs: [pre-build]
+    needs: [pre-build, migrate]
     steps:
       - name: Checkout
         uses: actions/checkout@v4
