--- a/.github/workflows/preview.yml
+++ b/.github/workflows/preview.yml
@@ -1,14 +1,9 @@
-name: Vercel Preview Deployment
-
-env:
-  VERCEL_ORG_ID: ${{ secrets.VERCEL_ORG_ID }}
-  VERCEL_PROJECT_ID: ${{ secrets.VERCEL_PROJECT_ID }}
+name: Pull request pipeline
 
 on:
   pull_request:
     branches:
       - main
-
 
 jobs:
 
@@ -27,18 +22,6 @@ jobs:
       - name: Formatter
         run: npm run format:check
 
-  deploy:
-    name: Preview deployment
-    runs-on: ubuntu-latest
-    needs: [pre-build]
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-      - name: Install Vercel CLI
-        run: npm install --global vercel@latest
-      - name: Pull Vercel environment information
-        run: vercel pull --yes --environment=preview --token=${{ secrets.VERCEL_TOKEN }}
-      - name: Build project artifacts
-        run: vercel build --token=${{ secrets.VERCEL_TOKEN }}
-      - name: Deploy project artifacts
-        run: vercel deploy --prebuilt --token=${{ secrets.VERCEL_TOKEN }}
+  # TODO: Preview specific Neon database branches
+
+  # TODO: Tests
