--- a/.env.example
+++ b/.env.example
@@ -10,3 +10,7 @@ NEXTAUTH_SECRET=""
 # Upstash
 UPSTASH_REDIS_REST_URL=""
 UPSTASH_REDIS_REST_TOKEN=""
+
+# PostHog
+NEXT_PUBLIC_POSTHOG_KEY=""
+NEXT_PUBLIC_POSTHOG_HOST=""
