--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -5,6 +5,7 @@ concurrency:
   cancel-in-progress: true
 
 env:
+  SKIP_ENV_VALIDATION: true
   VERCEL_ORG_ID: ${{ secrets.VERCEL_ORG_ID }}
   VERCEL_PROJECT_ID: ${{ secrets.VERCEL_PROJECT_ID }}
 
@@ -59,7 +60,7 @@ jobs:
 
   deploy:
     name: Production deployment
-    environment: production
+    environment: Production
     runs-on: ubuntu-latest
     needs: [pre-build, migrations]
     steps:
