--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -1,7 +1,6 @@
 name: Pull request pipeline
 
 env:
-  SKIP_ENV_VALIDATION: true
   VERCEL_ORG_ID: ${{ secrets.VERCEL_ORG_ID }}
   VERCEL_PROJECT_ID: ${{ secrets.VERCEL_PROJECT_ID }}
 
@@ -16,31 +15,40 @@ jobs:
     name: Pre-build checks
     runs-on: ubuntu-latest
     steps:
+
       - name: Checkout
         uses: actions/checkout@v4
+
       - name: Install dependencies
         run: npm install
+
       - name: Typecheck
         run: npm run typecheck
+
       - name: Lint
         run: npm run lint
+
       - name: Formatter
         run: npm run format:check
 
-  # TODO: Tests
-
   deploy:
-    name: Preview deployment
-    environment: Preview
+    name: Database setup and preview deployment
+    environment:
+      name: Preview
+      url: ${{ steps.deploy.outputs.url }}
     runs-on: ubuntu-latest
     needs: [pre-build]
     steps:
+
       - name: Checkout
         uses: actions/checkout@v4
-      - name: Install dependencies
-        run: npm install
 
-      - name: Create Neon branch
+      - name: Install dependencies
+        run: |
+          npm install
+          npm install --global vercel@latest
+
+      - name: Create database branch
         uses: neondatabase/create-branch-action@v5
         id: database
         with:
@@ -53,17 +61,22 @@ jobs:
       - name: Apply migrations
         run: |
           touch .env
-          echo DATABASE_URL: ${{ steps.database.outputs.db_url }} >> .env
+          echo DATABASE_URL=${{ steps.database.outputs.db_url }} >> .env
           npm run db:migrate
 
       - name: Run seed script
         run: npm run db:seed
 
-      - name: Install Vercel CLI
-        run: npm install --global vercel@latest
-      - name: Pull Vercel environment information
+      - name: Pull Vercel environment variables
         run: vercel pull --yes --environment=preview --token=${{ secrets.VERCEL_TOKEN }}
-      - name: Build project artifacts
+
+      - name: Build
         run: vercel build --token=${{ secrets.VERCEL_TOKEN }}
-      - name: Deploy project artifacts to Vercel
-        run: vercel deploy --prebuilt --token=${{ secrets.VERCEL_TOKEN }}
+
+      - name: Deploy
+        id: deploy
+        run: |
+          vercel deploy --prebuilt --token=${{ secrets.VERCEL_TOKEN }} > url.txt
+          echo "url="$(cat url.txt)"" >> $GITHUB_OUTPUT
+
+  # TODO: Tests
