--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -5,7 +5,6 @@ concurrency:
   cancel-in-progress: true
 
 env:
-  SKIP_ENV_VALIDATION: true
   VERCEL_ORG_ID: ${{ secrets.VERCEL_ORG_ID }}
   VERCEL_PROJECT_ID: ${{ secrets.VERCEL_PROJECT_ID }}
 
@@ -16,25 +15,11 @@ on:
 
 jobs:
 
-  pre-build:
-    name: Pre-build checks
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-      - name: Install dependencies
-        run: npm install
-      - name: Typecheck
-        run: npm run typecheck
-      - name: Lint
-        run: npm run lint
-      - name: Formatter
-        run: npm run format:check
-
   clean:
     name: Delete database preview branch
     runs-on: ubuntu-latest
     steps:
+
       - name: Delete Neon branch
         uses: neondatabase/delete-branch-action@v3
         with:
@@ -42,19 +27,43 @@ jobs:
           project_id: ${{ secrets.NEON_PROJECT_ID }}
           api_key: ${{ secrets.NEON_API_KEY }}
 
+  pre-build:
+    name: Pre-build checks
+    runs-on: ubuntu-latest
+    steps:
+
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Install dependencies
+        run: npm install
+
+      - name: Typecheck
+        run: npm run typecheck
+
+      - name: Lint
+        run: npm run lint
+
+      - name: Formatter
+        run: npm run format:check
+
   migrations:
     name: Migrations
     runs-on: ubuntu-latest
     needs: [pre-build]
     steps:
+
       - name: Checkout
         uses: actions/checkout@v4
+
       - name: Install dependencies
         run: npm install
+
+      - name: Pull Vercel environment variables
+        run: vercel env pull --yes --environment=production --token=${{ secrets.VERCEL_TOKEN }}
+
       - name: Apply migrations
         run: npm run db:migrate
-        env:
-          DATABASE_URL: ${{ secrets.DATABASE_URL }}
 
   # TODO: Tests
 
@@ -64,13 +73,18 @@ jobs:
     runs-on: ubuntu-latest
     needs: [pre-build, migrations]
     steps:
+
       - name: Checkout
         uses: actions/checkout@v4
-      - name: Install Vercel CLI
+
+      - name: Install dependencies
         run: npm install --global vercel@latest
-      - name: Pull Vercel environment information
+
+      - name: Pull environment variables
         run: vercel pull --yes --environment=production --token=${{ secrets.VERCEL_TOKEN }}
-      - name: Build project artifacts
+
+      - name: Build
         run: vercel build --prod --token=${{ secrets.VERCEL_TOKEN }}
-      - name: Deploy project artifacts to Vercel
+
+      - name: Deploy
         run: vercel deploy --prebuilt --prod --token=${{ secrets.VERCEL_TOKEN }}
