--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -15,18 +15,6 @@ on:
 
 jobs:
 
-  clean:
-    name: Delete database preview branch
-    runs-on: ubuntu-latest
-    steps:
-
-      - name: Delete Neon branch
-        uses: neondatabase/delete-branch-action@v3
-        with:
-          branch: preview/${{ github.ref_name }}
-          project_id: ${{ secrets.NEON_PROJECT_ID }}
-          api_key: ${{ secrets.NEON_API_KEY }}
-
   pre-build:
     name: Pre-build checks
     runs-on: ubuntu-latest
@@ -69,7 +57,9 @@ jobs:
 
   deploy:
     name: Production deployment
-    environment: Production
+    environment:
+      name: Production
+      url: https://bookclub.social/
     runs-on: ubuntu-latest
     needs: [pre-build, migrations]
     steps:
