--- a/.github/workflows/preview.yml
+++ b/.github/workflows/preview.yml
@@ -31,11 +31,8 @@ jobs:
       - name: Formatter
         run: npm run format:check
 
-  deploy:
-    name: Database setup and preview deployment
-    environment:
-      name: Preview
-      url: ${{ steps.deploy.outputs.url }}
+  database:
+    name: Database setup
     runs-on: ubuntu-latest
     needs: [pre-build]
     steps:
@@ -59,16 +56,35 @@ jobs:
           api_key: ${{ secrets.NEON_API_KEY }}
           
       - name: Pull Vercel environment variables
-        run: vercel env pull .env --yes --environment=preview --token=${{ secrets.VERCEL_TOKEN }}
+        run: |
+          vercel env pull .env --yes --environment=preview --token=${{ secrets.VERCEL_TOKEN }}
+          echo DATABASE_URL=${{ steps.database.outputs.db_url }} >> .env
 
       - name: Apply migrations
-        run: |
-          touch .env
-          echo DATABASE_URL=${{ steps.database.outputs.db_url }} >> .env
-          npm run db:migrate
+        run: npm run db:migrate
 
       - name: Run seed script
         run: npm run db:seed
+
+  # TODO: Tests
+
+  deploy:
+    name: Preview deployment
+    environment:
+      name: Preview
+      url: ${{ steps.deploy.outputs.url }}
+    runs-on: ubuntu-latest
+    needs: [pre-build, database]
+    steps:
+
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Install dependencies
+        run: npm install --global vercel@latest
+
+      - name: Pull environment variables
+        run: vercel pull --yes --environment=preview --token=${{ secrets.VERCEL_TOKEN }}
 
       - name: Build
         run: vercel build --token=${{ secrets.VERCEL_TOKEN }}
@@ -78,5 +94,3 @@ jobs:
         run: |
           vercel deploy --prebuilt --token=${{ secrets.VERCEL_TOKEN }} > url.txt
           echo "url="$(cat url.txt)"" >> $GITHUB_OUTPUT
-
-  # TODO: Tests
