--- a/.github/workflows/preview.yml
+++ b/.github/workflows/preview.yml
@@ -31,8 +31,8 @@ jobs:
       - name: Formatter
         run: npm run format:check
 
-  database:
-    name: Database setup
+  deploy:
+    name: Database setup and preview deployment
     runs-on: ubuntu-latest
     needs: [pre-build]
     steps:
@@ -66,26 +66,6 @@ jobs:
       - name: Run seed script
         run: npm run db:seed
 
-  # TODO: Tests
-
-  deploy:
-    name: Preview deployment
-    environment:
-      name: Preview
-      url: ${{ steps.deploy.outputs.url }}
-    runs-on: ubuntu-latest
-    needs: [pre-build, database]
-    steps:
-
-      - name: Checkout
-        uses: actions/checkout@v4
-
-      - name: Install dependencies
-        run: npm install --global vercel@latest
-
-      - name: Pull environment variables
-        run: vercel pull --yes --environment=preview --token=${{ secrets.VERCEL_TOKEN }}
-
       - name: Build
         run: vercel build --token=${{ secrets.VERCEL_TOKEN }}
 
@@ -94,3 +74,5 @@ jobs:
         run: |
           vercel deploy --prebuilt --token=${{ secrets.VERCEL_TOKEN }} > url.txt
           echo "url="$(cat url.txt)"" >> $GITHUB_OUTPUT
+
+  # TODO: Tests
