--- a/.github/workflows/preview.yml
+++ b/.github/workflows/preview.yml
@@ -55,7 +55,7 @@ jobs:
           username: ${{ secrets.NEON_DATABASE_ROLE_NAME }}
           api_key: ${{ secrets.NEON_API_KEY }}
           
-      - name: Pull Vercel environment variables
+      - name: Define environment variables
         run: |
           vercel env pull .env --yes --environment=preview --token=${{ secrets.VERCEL_TOKEN }}
           echo DATABASE_URL=${{ steps.database.outputs.db_url }} >> .env
@@ -65,6 +65,9 @@ jobs:
 
       - name: Run seed script
         run: npm run db:seed
+
+      - name: Pull Vercel environment variables
+        run: vercel pull --yes --environment=preview --token=${{ secrets.VERCEL_TOKEN }}
 
       - name: Build
         run: vercel build --token=${{ secrets.VERCEL_TOKEN }}
