--- a/.github/workflows/preview.yml
+++ b/.github/workflows/preview.yml
@@ -33,6 +33,9 @@ jobs:
 
   deploy:
     name: Database setup and preview deployment
+    environment:
+      name: Preview
+      url: ${{ steps.deploy.outputs.url }}
     runs-on: ubuntu-latest
     needs: [pre-build]
     steps:
@@ -66,11 +69,8 @@ jobs:
       - name: Run seed script
         run: npm run db:seed
 
-      - name: Pull Vercel environment variables
-        run: vercel pull --yes --environment=preview --token=${{ secrets.VERCEL_TOKEN }}
-
       - name: Build
-        run: vercel build --token=${{ secrets.VERCEL_TOKEN }}
+        run: vercel build --yes --token=${{ secrets.VERCEL_TOKEN }}
 
       - name: Deploy
         id: deploy
