--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,3 +1,18 @@
 {
-  "extends": ["next/core-web-vitals", "next/typescript"]
+  "plugins": ["drizzle"],
+  "extends": ["next/typescript", "next/core-web-vitals"],
+  "rules": {
+    "drizzle/enforce-delete-with-where": [
+      "error",
+      {
+        "drizzleObjectName": ["db", "ctx.db"]
+      }
+    ],
+    "drizzle/enforce-update-with-where": [
+      "error",
+      {
+        "drizzleObjectName": ["db", "ctx.db"]
+      }
+    ]
+  }
 }
