--- a/package.json
+++ b/package.json
@@ -9,38 +9,55 @@
     "lint": "next lint",
     "typecheck": "tsc --noEmit",
     "format": "npx prettier . --write",
-    "format:check": "prettier . --check"
+    "format:check": "prettier . --check",
+    "db:studio": "drizzle-kit studio",
+    "db:generate": "drizzle-kit generate",
+    "db:drop": "drizzle-kit drop",
+    "db:migrate": "tsx ./src/db/scripts/migrate.ts",
+    "db:seed": "tsx ./src/db/scripts/seed.ts"
   },
   "dependencies": {
+    "@auth/drizzle-adapter": "^1.7.0",
     "@hookform/resolvers": "^3.9.0",
+    "@node-rs/argon2": "^1.8.3",
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-slot": "^1.1.0",
     "@t3-oss/env-nextjs": "^0.11.1",
     "@upstash/ratelimit": "^2.0.3",
-    "@upstash/redis": "^1.34.1",
+    "@upstash/redis": "^1.34.3",
     "class-variance-authority": "^0.7.0",
+    "dotenv": "^16.4.5",
+    "drizzle-orm": "^0.34.1",
+    "input-otp": "^1.2.4",
     "lucide-react": "^0.447.0",
+    "nanoid": "^5.0.7",
     "next": "14.2.11",
+    "next-auth": "^5.0.0-beta.22",
     "next-themes": "^0.3.0",
-    "react": "^18",
-    "react-dom": "^18",
+    "postgres": "^3.4.4",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.0",
     "resend": "^4.0.0",
+    "server-only": "^0.0.1",
     "sonner": "^1.5.0",
     "tailwind-merge": "^2.5.3",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.23.8"
   },
   "devDependencies": {
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "eslint": "^8",
+    "@types/node": "^20.16.11",
+    "@types/react": "^18.3.11",
+    "@types/react-dom": "^18.3.0",
+    "drizzle-kit": "^0.25.0",
+    "eslint": "^8.57.1",
     "eslint-config-next": "14.2.11",
-    "postcss": "^8",
+    "eslint-plugin-drizzle": "^0.2.3",
+    "postcss": "^8.4.47",
     "prettier": "3.3.3",
-    "prettier-plugin-tailwindcss": "^0.6.6",
-    "tailwindcss": "^3.4.1",
-    "typescript": "^5"
+    "prettier-plugin-tailwindcss": "^0.6.8",
+    "tailwindcss": "^3.4.13",
+    "tsx": "^4.19.1",
+    "typescript": "^5.6.3"
   }
 }
