--- a/.github/workflows/preview.yml
+++ b/.github/workflows/preview.yml
@@ -10,10 +10,12 @@ on:
       - main
 
 jobs:
+
   pre-build:
     name: Pre-build checks
     runs-on: ubuntu-latest
     steps:
+
       - name: Checkout
         uses: actions/checkout@v4
 
@@ -37,6 +39,7 @@ jobs:
     runs-on: ubuntu-latest
     needs: [pre-build]
     steps:
+
       - name: Checkout
         uses: actions/checkout@v4
 
@@ -45,9 +48,26 @@ jobs:
           npm install
           npm install --global vercel@latest
 
+      - name: Create database branch
+        uses: neondatabase/create-branch-action@v5
+        id: database
+        with:
+          branch_name: preview/${{ github.head_ref }}
+          project_id: ${{ secrets.NEON_PROJECT_ID }}
+          database: ${{ secrets.NEON_DATABASE_NAME }}
+          username: ${{ secrets.NEON_DATABASE_ROLE_NAME }}
+          api_key: ${{ secrets.NEON_API_KEY }}
+          
       - name: Pull environment variables
         run: |
           vercel env pull .env --yes --environment=preview --token=${{ secrets.VERCEL_TOKEN }}
+          echo DATABASE_URL=${{ steps.database.outputs.db_url }} >> .env
+
+      - name: Apply migrations
+        run: npm run db:migrate
+
+      - name: Run seed script
+        run: npm run db:seed
 
       - name: Build
         run: vercel build --yes --token=${{ secrets.VERCEL_TOKEN }}
@@ -57,3 +77,5 @@ jobs:
         run: |
           vercel deploy --prebuilt --token=${{ secrets.VERCEL_TOKEN }} > url.txt
           echo "url="$(cat url.txt)"" >> $GITHUB_OUTPUT
+
+  # TODO: Tests
