--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -33,13 +33,33 @@ jobs:
       - name: Formatter
         run: npm run format:check
 
+  migrations:
+    name: Migrations
+    runs-on: ubuntu-latest
+    needs: [pre-build]
+    steps:
+
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Install dependencies
+        run: npm install
+
+      - name: Pull Vercel environment variables
+        run: vercel env pull .env --yes --environment=production --token=${{ secrets.VERCEL_TOKEN }}
+
+      - name: Apply migrations
+        run: npm run db:migrate
+
+  # TODO: Tests
+
   deploy:
     name: Production deployment
     environment:
       name: Production
       url: https://bookclub.social/
     runs-on: ubuntu-latest
-    needs: [pre-build]
+    needs: [pre-build, migrations]
     steps:
       - name: Checkout
         uses: actions/checkout@v4
