--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   "dependencies": {
     "@auth/drizzle-adapter": "^1.7.0",
     "@hookform/resolvers": "^3.9.0",
-    "@node-rs/argon2": "^1.8.3",
+    "@node-rs/argon2": "^2.0.0",
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-slot": "^1.1.0",
     "@t3-oss/env-nextjs": "^0.11.1",
@@ -29,9 +29,9 @@
     "dotenv": "^16.4.5",
     "drizzle-orm": "^0.34.1",
     "input-otp": "^1.2.4",
-    "lucide-react": "^0.447.0",
+    "lucide-react": "^0.452.0",
     "nanoid": "^5.0.7",
-    "next": "14.2.11",
+    "next": "^14.2.15",
     "next-auth": "^5.0.0-beta.22",
     "next-themes": "^0.3.0",
     "postgres": "^3.4.4",
@@ -46,7 +46,7 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
-    "@types/node": "^20.16.11",
+    "@types/node": "^22.7.5",
     "@types/react": "^18.3.11",
     "@types/react-dom": "^18.3.0",
     "drizzle-kit": "^0.25.0",
